--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello world!!
+<!DOCTYPE html>
+
+<html lang="zh-CN">
+  
+<head>
+  <meta charset="utf-8">
+  <title>BIGwarehouse<title>
+</head>    
+    
+<bodu>
+<h1>Hello Bigwarehouse</h1>  
+<p>This is the first page I made at Bigwarehouse.</p>
+</bodu> 
+    
+</html>    
