--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Bigwarehouse<title>
 </head>    
     
-<bodu>
+<body>
 <h1>Hello Bigwarehouse</h1>  
 <p>This is the first page I made at Bigwarehouse.</p>
-</bodu> 
+</body> 
     
 </html>    
