--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <body>
 <h1>Hello Bigwarehouse</h1>  
-<p>This is the first page I made at Bigwarehouse.</p>
+<p>This’s the first page I made at Bigwarehouse.</p>
 </body> 
     
 </html>    
