--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
 </head>    
     
 <body>
-<h1>Hello Adalab</h1>  
-<p>This is the first page I made at Adalab.</p>
-<p>
-这是为<a href="https://www.adalab.cn"><img src="https://www.adalab.cn/images/adalab.png"></a>挑战赛制作的网站。
-</p>
+<h1>新的刷魂点-鲜血王朝1分钟4W魂</h1>  
+<h2>做完白面具支线就可以去,前期就行,需要入侵杀一个玩家。</h2>
+<h3>白面具支线<h3>
+<p>支线攻略点击图片跳转<a href="https://www.adalab.cn"><img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-evvnK19T3cSjf-b2.jpg"></a></p>
+
+  <p>1.打完女王之后，回到初始之地，门口白面具不见，让你去蔷薇教堂找他。</p>
+
+  <p>2.找到他后，他会给你溃烂血指(一次性入侵道具)。入侵之后进行下一步对话。</p>
+  
+  <p>3.他问你要不要加入鲜血王朝，选择加入，他会要求你杀死一个女巫，在白布上沾满女巫的血。</p>
+
+  <p>4.前往四塔楼，从四塔楼最顶部的塔向下看，最左边的塔的传送门。打开之后可以前往最开始剧情杀你接肢的地方。</p>
+
+  <p>5.向前走会有一个女巫，可以用女巫的血染布。(这个女巫可能就是玩家本身的女巫，剧情被杀了，大老婆上位。)</p>
+
+  <p>6.继续跟白面具对话，他会给你一个血指(永久的入侵道具，无限次使用)和一个令牌。</p>
+
+  <p>7.令牌直接捏碎之后，进入鲜血王朝，向前走可以打BOSS鲜血君王</p>
+
+  
+  <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-530uZkT3cSsg-g0.jpg">
+  
+  <p>进去后来到这个篝火<P>
+  <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-i4igZgT3cSsg-g0.jpg">
+  <p>
+    用大范围AOE清怪即可,我用的腐烂吐息,近战可以考虑用老寒腿等战技
+    大概十几个怪,有金色粪金龟护符1个2500魂,全清4W魂
+  </p>  
 </body> 
     
 </html>    
