--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <h1>新的刷魂点-鲜血王朝1分钟4W魂</h1>  
 <h2>做完白面具支线就可以去,前期就行,需要入侵杀一个玩家。</h2>
-<h3>白面具支线<h3> <p>支线攻略点击图片跳转<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-evvnK19T3cSjf-b2.jpg"></a></p>
+<h3>白面具支线<h3> 
+  <p>支线攻略点击图片跳转<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-evvnK19T3cSjf-b2.jpg"></a></p>
 
   <p>1.打完女王之后，回到初始之地，门口白面具不见，让你去蔷薇教堂找他。</p>
 
@@ -30,6 +31,7 @@
   <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-530uZkT3cSsg-g0.jpg">
   
   <p>进去后来到这个篝火<P>
+    
   <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-i4igZgT3cSsg-g0.jpg">
   <p>
     用大范围AOE清怪即可,我用的腐烂吐息,近战可以考虑用老寒腿等战技
