--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>新的刷魂点-鲜血王朝1分钟4W魂</h1>  
 <h2>做完白面具支线就可以去,前期就行,需要入侵杀一个玩家。</h2>
 <h3>白面具支线<h3> 
-  <p>支线攻略点击图片跳转<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-evvnK19T3cSjf-b2.jpg"></a></p>
+  <p>支线攻略点击图片跳转<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://pic2.zhimg.com/80/v2-21be41d3ae42b28cfb374652d4068729_720w.jpg"></a></p>
 
   <p>1.打完女王之后，回到初始之地，门口白面具不见，让你去蔷薇教堂找他。</p>
 
@@ -28,11 +28,11 @@
   <p>7.令牌直接捏碎之后，进入鲜血王朝，向前走可以打BOSS鲜血君王</p>
 
   
-  <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-530uZkT3cSsg-g0.jpg">
+  <img src="https://pic2.zhimg.com/80/v2-1762fb84c2ca9df07b31fd732c4124d9_720w.jpg">
   
   <p>进去后来到这个篝火<P>
     
-  <img src="https://img.nga.178.com/attachments/mon_202203/01/n3Q17l-i4igZgT3cSsg-g0.jpg">
+  <img src="https://pic1.zhimg.com/80/v2-fb57cb0126c762b4c81e306df71d47e8_720w.jpg">
   <p>
     用大范围AOE清怪即可,我用的腐烂吐息,近战可以考虑用老寒腿等战技
     大概十几个怪,有金色粪金龟护符1个2500魂,全清4W魂
