--- a/bilibili.html
+++ b/bilibili.html
@@ -10,7 +10,7 @@
 <body>  
 <iframe src="//player.bilibili.com/player.html?aid=509442927&bvid=BV1ku411D7ZM&cid=518845398&page=1&high_quality=1&danmaku=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   
-<p><a href="https://https://victor012606.github.io/">Main Page</a></p>
+<p><a href="https://https://victor012606.github.io/"><strong>Main Page</strong></a></p>
 </body>
   
 </html>  
