--- a/bilibili.html
+++ b/bilibili.html
@@ -4,7 +4,7 @@
   
 <head>
   <meta charset="utf-8">
-  <title>40米长牙+超帅诺拉双头刀 尤拉支线快速拿取详细攻略</title>
+  <title>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</title>
 </head>    
   
 <body>  
