--- a/bilibili.html
+++ b/bilibili.html
@@ -11,7 +11,7 @@
 <h1>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</h1>
 <iframe src="//player.bilibili.com/player.html?aid=509442927&bvid=BV1ku411D7ZM&cid=518845398&page=1&high_quality=1&danmaku=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   
-<p><a href="https://https://victor012606.github.io/"><strong>Main Page</strong></a></p>
+<p><a href="https://victor012606.github.io/"><strong>Main Page</strong></a></p>
 </body>
   
 </html>  
