--- a/bilibili.html
+++ b/bilibili.html
@@ -7,11 +7,25 @@
   <title>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</title>
 </head>    
   
-<body>  
-<h1>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</h1>
-<iframe src="//player.bilibili.com/player.html?aid=509442927&bvid=BV1ku411D7ZM&cid=518845398&page=1&high_quality=1&danmaku=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-  
-<p><a href="https://victor012606.github.io/"><strong>Main Page</strong></a></p>
+<body>
+  <header>
+    <img src="https://pic4.zhimg.com/80/v2-aa445b6da393056257a54dc00b337037_720w.jpg">
+  </header>
+  <footer>
+    by <a href="https://www.zhihu.com/people/thorin" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
+  </footer>
+ <main>
+    <aside>
+      <ul>
+       <li><p><a href="https://victor012606.github.io/index.html"><strong>Farm</strong></a></p></li>
+      </ul>
+    </aside>
+    <article>
+     <h1>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</h1>
+     <iframe src="//player.bilibili.com/player.html?aid=509442927&bvid=BV1ku411D7ZM&cid=518845398&page=1&high_quality=1&danmaku=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+     <p><a href="https://victor012606.github.io/"><strong>Main Page</strong></a></p>
+    </article> 
+ </main>     
 </body>
   
 </html>  
