--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="https://pic4.zhimg.com/80/v2-aa445b6da393056257a54dc00b337037_720w.jpg">
   </header>
   <footer>
-    by <a href="https://www.zhihu.com/people/thorin" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
+    by <a href="https://www.zhihu.com/people/thorin" target="_blank">Victor</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
   </footer>
   <main>
     <aside>
