--- a/bilibili.html
+++ b/bilibili.html
@@ -5,6 +5,8 @@
 <head>
   <meta charset="utf-8">
   <title>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</title>
+  <link href="https://www.adalab.cn/admission.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>    
   
 <body>
