--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       <p>5.向前走会有一个女巫，可以用女巫的血染布。(这个女巫可能就是玩家本身的女巫，剧情被杀了，大老婆上位。)</p>
       <p>6.继续跟白面具对话，他会给你一个血指(永久的入侵道具，无限次使用)和一个令牌。</p>
       <p>7.令牌直接捏碎之后，进入鲜血王朝，向前走可以打BOSS鲜血君王</p>
+      <p><strong>进去后来到这个篝火</strong><P>  
       <img src="https://pic2.zhimg.com/80/v2-1762fb84c2ca9df07b31fd732c4124d9_720w.jpg" class="small" id="smart-image">
-      <p>进去后来到这个篝火<P>
-      <img src="https://pic1.zhimg.com/80/v2-fb57cb0126c762b4c81e306df71d47e8_720w.jpg" class="small" id="smart-image">
       <p>用大范围AOE清怪即可,我用的腐烂吐息,近战可以考虑用老寒腿等战技
          大概十几个怪,有金色粪金龟护符1个2500魂,全清4W魂
       </p>  
