--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 <body>
   <header>
-    <img src="https://pic4.zhimg.com/80/v2-aa445b6da393056257a54dc00b337037_720w.jpg">
+    <img src="https://user-images.githubusercontent.com/100692708/157488916-1bb65732-1abd-4a48-989f-542eef954f31.png">
   </header>
   <main>
     <aside>
