--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   </header>
   <main>
     <aside>
+     background-image:url(https://user-images.githubusercontent.com/100692708/157530304-ad47631f-ef33-450c-9779-89b394f6590a.jpg);
+     background-repeat:no-repeat;
+     background-size:100% auto;
       <ul>
        <li><p><a href="https://victor012606.github.io/bilibili.html"><strong>40米长牙+诺拉双头刀 尤拉支线快速拿取详细攻略</strong></a></p></li>
       </ul>
