--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>TEXT</h1>  
       <h2>TEXT</h2>
       <h3>TEXT<h3>
-      <p>TEXT<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://pic2.zhimg.com/80/v2-21be41d3ae42b28cfb374652d4068729_720w.jpg"></a></p>
+      <p>TEXT<a href="https://bbs.nga.cn/read.php?tid=30870271"><img src="https://pic2.zhimg.com/80/v2-21be41d3ae42b28cfb374652d4068729_720w.jpg"class="small"></a></p>
       <p>TEXT</p>
       <p>TEXT</p>
       <p>TEXT</p>
