--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <main>
     <aside>
       <ul>
-       <li><p><a href="https://victor012606.github.io/bilibili.html"><strong>TEXT</strong></a></p></li>
+       <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
+       <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
+       <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
       </ul>
     </aside>
     <article>
