--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   <main>
     <aside>
-      <ul>
+      <ul class="menu">
        <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
        <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
        <li><a href="https://victor012606.github.io/bilibili.html">TEXT</a></li>
